# open-retrievals

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ja-JP.md  README_zh-CN.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: codeql-analysis.yml  pypi_release.yml  test.yml
docs/: requirements_docs.txt
docs/source/: conf.py  embed.rst  finetune.rst  index.rst  quick-start.rst  rag.rst  rerank.rst  retrieval.rst
example_data/: data.jsonl
examples/: README.md  README_zh_CN.md  embed_llm.sh  embed_llm_finetune.py  embed_pairwise_finetune.py  embedding_llm_finetune.py  embedding_pairwise_finetune.py  finetune_arcface.py  finetune_llm.py  finetune_llm.sh  finetune_llm_embed.py  finetune_pairwise.py  finetune_pairwise.sh  finetune_pairwise_embed.py  rag_langchain.py  rag_langchain_demo.py  rag_llamaindex.py  rerank_colbert.py  rerank_cross_encoder.py  rerank_llm_finetune.py  retrieval_faiss.py
examples/0_embedding/: README.md  distill.py  embed2onnx.py  embed_server.py  train_llm.py  train_pairwise.py
examples/0_embeddings/: embed_llm_finetune.py  embed_pairwise.sh  embed_pairwise_finetune.py  embed_pairwise_simple.py  llm_embed.sh  llm_finetune_for_embed.py  pairwise_finetune.py  pairwise_finetune2.py
examples/1_retrieval/: README.md  llm_finetune_for_embed.py  pairwise_finetune.py  retrieval_faiss.py
examples/2_rerank/: README.md  train_colbert.py  train_cross_encoder.py
examples/2_reranking/: README.md  (+1 more)
src/: mteb_results_sts12.txt
(+164 files in other folders)
