[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
(
      \docs
    | \tests
)
'''
skip-string-normalization = true  # Avoid black replace all single quotes to the double

[tool.isort]
profile = "black"
src_paths = ["src", "examples", "tests"]
skip_gitignore = true
known_first_party = ["retrievals"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
